feature: basic blob upload tests (#263)
