# docker_images/pythonv2/wrapper/swagger_server/controllers/device_controller.py
@@ -1,6 +1,7 @@
 import connexion
 import six
 
+from swagger_server.models.blob_storage_info import BlobStorageInfo  # noqa: E501
 from swagger_server.models.certificate import Certificate  # noqa: E501
 from swagger_server.models.connect_response import ConnectResponse  # noqa: E501
 from swagger_server.models.event_body import EventBody  # noqa: E501
@@ -24,7 +25,7 @@ def device_connect(transportType, connectionString, caCertificate=None):  # noqa
     :type transportType: str
     :param connectionString: connection string
     :type connectionString: str
-    :param caCertificate:
+    :param caCertificate: 
     :type caCertificate: dict | bytes
 
     :rtype: ConnectResponse
@@ -58,7 +59,7 @@ def device_create_from_connection_string(transportType, connectionString, caCert
     :type transportType: str
     :param connectionString: connection string
     :type connectionString: str
-    :param caCertificate:
+    :param caCertificate: 
     :type caCertificate: dict | bytes
 
     :rtype: ConnectResponse
@@ -66,7 +67,9 @@ def device_create_from_connection_string(transportType, connectionString, caCert
     if connexion.request.is_json:
         caCertificate = Certificate.from_dict(connexion.request.get_json())  # noqa: E501
     # changed from return 'do some magic!'
-    return device_glue.create_from_connection_string(transportType, connectionString, caCertificate)
+    return device_glue.create_from_connection_string(
+        transportType, connectionString, caCertificate
+    )
 
 
 def device_create_from_x509(transportType, X509):  # noqa: E501
@@ -76,8 +79,8 @@ def device_create_from_x509(transportType, X509):  # noqa: E501
 
     :param transportType: Transport to use
     :type transportType: str
-    :param X509:
-    :type X509:
+    :param X509: 
+    :type X509: 
 
     :rtype: ConnectResponse
     """
@@ -183,6 +186,22 @@ def device_get_connection_status(connectionId):  # noqa: E501
     return json.dumps(device_glue.get_connection_status(connectionId))
 
 
+def device_get_storage_info_for_blob(connectionId, blobName):  # noqa: E501
+    """Get storage info for uploading into blob storage
+
+     # noqa: E501
+
+    :param connectionId: Id for the connection
+    :type connectionId: str
+    :param blobName: name of blob
+    :type blobName: str
+
+    :rtype: BlobStorageInfo
+    """
+    # changed from return 'do some magic!'
+    return device_glue.get_storage_info_for_blob(connectionId, blobName)
+
+
 def device_get_twin(connectionId):  # noqa: E501
     """Get the device twin
 
@@ -196,6 +215,27 @@ def device_get_twin(connectionId):  # noqa: E501
     # changed from return 'do some magic!'
     return device_glue.get_twin(connectionId)
 
+def device_notify_blob_upload_status(connectionId, correlationId, isSuccess, statusCode, statusDescription):  # noqa: E501
+    """notify iothub about blob upload status
+
+     # noqa: E501
+
+    :param connectionId: Id for the connection
+    :type connectionId: str
+    :param correlationId: correlation id for blob upload
+    :type correlationId: str
+    :param isSuccess: True if blob upload was successful
+    :type isSuccess: bool
+    :param statusCode: status code for blob upload
+    :type statusCode: str
+    :param statusDescription: human readable descripton of the status for blob upload
+    :type statusDescription: str
+
+    :rtype: None
+    """
+    # changed from return 'do some magic!'
+    device_glue.notify_blob_upload_status(connectionId, correlationId, isSuccess, statusCode, statusDescription)
+
 
 def device_patch_twin(connectionId, twin):  # noqa: E501
     """Updates the device twin
@@ -204,7 +244,7 @@ def device_patch_twin(connectionId, twin):  # noqa: E501
 
     :param connectionId: Id for the connection
     :type connectionId: str
-    :param twin:
+    :param twin: 
     :type twin: dict | bytes
 
     :rtype: None
@@ -231,7 +271,6 @@ def device_reconnect(connectionId, forceRenewPassword=None):  # noqa: E501
     device_glue.reconnect(connectionId, forceRenewPassword)
 
 
-
 def device_send_event(connectionId, eventBody):  # noqa: E501
     """Send an event
 
@@ -239,7 +278,7 @@ def device_send_event(connectionId, eventBody):  # noqa: E501
 
     :param connectionId: Id for the connection
     :type connectionId: str
-    :param eventBody:
+    :param eventBody: 
     :type eventBody: dict | bytes
 
     :rtype: None
@@ -277,7 +316,9 @@ def device_wait_for_connection_status_change(connectionId, connectionStatus):  #
     :rtype: str
     """
     # changed from return 'do some magic!'
-    return json.dumps(device_glue.wait_for_connection_status_change(connectionId, connectionStatus))
+    return json.dumps(
+        device_glue.wait_for_connection_status_change(connectionId, connectionStatus)
+    )
 
 
 def device_wait_for_desired_properties_patch(connectionId):  # noqa: E501
@@ -303,7 +344,7 @@ def device_wait_for_method_and_return_response(connectionId, methodName, request
     :type connectionId: str
     :param methodName: name of the method to handle
     :type methodName: str
-    :param requestAndResponse:
+    :param requestAndResponse: 
     :type requestAndResponse: dict | bytes
 
     :rtype: None
